GCP-8706: fix for the ff:
    * DONE - We should add an "Open" button next to the Basic Details heading to give the user a very easy and obvious way to begin working with the nursery.
    * DONE - Close All Tabs should be on the same line as Review Nursery Details.
    * DONE - Why is the description of the variable in the tables not aligned under the Description heading? This is inconsistent with the view on the Nursery Setting tab. (Create Nursery Screen)
    * DONE - Pop-up that shows variable details:
  Title should be Details for [Variable Name]
  Labels should be bold.
    This applies also on the Nursery Settings tab

Reviewer: Tiff Go

Issues: None

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -1021,4 +1021,6 @@ div.sectionContainer {
 .dl-horizontal dd {
 	padding: 4px;
 }
+.fbk-open-button-left-margin{
+	margin-left: 20px;
 }
